--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,6 @@
             <li>{{fruit.quantity}} {{fruit.name}}</li>
         {% endfor %}
         </ul>
+        These are the types of fruits.
     </body>
 </html>
