--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 <html>
     <head><title>Fruit list</title></head>
     <body>
+        <li>Our first API key is: "{{key_1}}"</li>
+        <li>Our second API key is: "{{key_2}}"</li>
         There are {{ fruits | length }} types of fruits.
         <ul>
         {% for fruit in fruits %}
